[package]
name = "lazy-load-exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
futures-util = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "io-std"] }
tokio-stream = { version = "0.1.14", features = ["io-util", "sync"] }
tokio-tungstenite = "0.21.0"
